GNOME Bugzilla – Bug 768991
oggdemux: fix unknown duration playing Ogg from HTTP
Last modified: 2016-07-25 10:40:47 UTC
This fixes seeking with gst-play-1.0 on an Ogg/Opus file played via http.
Created attachment 331813 [details] [review] oggdemux: fix unknown duration playing Opus from HTTP
Created attachment 331816 [details] [review] oggdemux: fix duration reporting in push mode in some cases I had this patch pending, which I forgot to push (accidentally got git stashed it seems). I think it was for the same issue. Not sure which one is better though, just putting it out here for comparison.
PS: is the 'opus' part relevant here at all?
I don't think Opus is relevant here, but that's the test case I was using. I guess it makes more sense to remove this from the commit header, you're right. Intersting about total_time. I have to admit I don't know the difference between those :)
Created attachment 331827 [details] [review] oggdemux: fix unknown duration playing Ogg from HTTP How about that ? :)
Did you try and figure out what the difference is? I'd say just push it, I doubt it can make anything worse :)
total_time is valid in pull mode. Both it and push_mode_length resolve to the exact same time when trying in push mode over http. I'm not sure why I did not use total_time directly when I made the push mode changes.
commit 714e3b9741eb61174c3138fc7f3b92f81faf5ea6 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Wed Jul 20 11:47:48 2016 +0100 oggdemux: fix unknown duration playing Ogg over HTTP If the duration is not known from the chain, it might be known by the startup seek. This fixes failure to seek. Merged with a patch from Tim-Philipp Müller <tim@centricular.com> https://bugzilla.gnome.org/show_bug.cgi?id=768991
Something for 1.8?
Yes, should be fine. (famous last words etc.)